fixes scrolling on smaller screens

--- a/static/styles/variables.scss
+++ b/static/styles/variables.scss
@@ -15,5 +15,6 @@ $font-primary: Mulish, Poppins, 'Poppins Regular', 'Poppins-Regular', 'Lexend De
 $font-secondary: Poppins, 'Poppins Regular', 'Poppins-Regular', 'Lexend Deca', 'Lexend Deca Regular', 'LexendDeca-Regular', Mullish, 'Helvetica Neue', Helvetica, arial, sans-serif;
 
 // Misc
-$mobile-cutoff: 900px;
+$mobile-cutoff: 950px;
+$mobile-cutoff-xs: 350px;
 
